--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
         <tr>
             <td>Task1</td>
             <td><a href="https://github.com/Chanakya1238/React-task-1-MERN-FS.git">Repository of task1</a></td>
-            <td><a href="https://react-task-1-mern-fs.vercel.app/">Link of task1</a></td>
+            <td><a href=" https://reacttask1-gntei37w0-chanakya1238s-projects.vercel.app">Link of task1</a></td>
         </tr>
         <tr>
             <td>Task2</td>
             <td><a href="https://github.com/Chanakya1238/React-task-2-Mern-FS.git">Repository of task2</a></td>
-            <td><a href="https://react-task-2-mern-fs.vercel.app/">Link of task2</a></td>
+            <td><a href="https://reacttask2-85zdf6wyh-chanakya1238s-projects.vercel.app">Link of task2</a></td>
             
         </tr>
         <tr>
             <td>Task3</td>
             <td><a href="https://github.com/Chanakya1238/React-task-3-Mern-FS.git">Repository of task3</a></td>
-            <td><a href="https://react-task-3-mern-fs.vercel.app/">Link of task3</a></td>
+            <td><a href="https://reacttask3-9sdnxxy10-chanakya1238s-projects.vercel.app">Link of task3</a></td>
         </tr>
         <tr>
             <td>Task4</td>
             <td><a href="https://github.com/Chanakya1238/React-task-4-Mern-FS.git">Repository of task4</a></td>
-            <td><a href="https://react-task-4-mern-fs.vercel.app/">Link of task4</a></td>
+            <td><a href="https://reacttask4-m2jf89pqa-chanakya1238s-projects.vercel.app/">Link of task4</a></td>
         </tr>
         <tr>
             <td>Task5</td>
             <td><a href="https://github.com/Chanakya1238/React-task-5-Mern-FS.git">Repository of task5</a></td>
-            <td><a href="https://react-task-5-mern-fs.vercel.app/">Link of task5</a></td>
+            <td><a href="https://reacttask5-q5mow32j5-chanakya1238s-projects.vercel.app">Link of task5</a></td>
         </tr>
         
   
